# ruby-rust-extension-benchmark

./: Gemfile  README.md  Rakefile  benchmark.rb  build-libs.sh  pair.rb
cash_flow_c/: CODE_OF_CONDUCT.md  Gemfile  README.md  Rakefile  cash_flow_c.gemspec
cash_flow_c/ext/cash_flow_c/: cash_flow_c.c  cash_flow_c.h  extconf.rb
cash_flow_c/lib/: cash_flow_c.rb
cash_flow_c/lib/cash_flow_c/: version.rb
cash_flow_c/spec/: cash_flow_c_spec.rb  spec_helper.rb
cashflow-c/: Gemfile  LICENSE.txt  README.md  Rakefile  example_ext.gemspec
cashflow-c/ext/example_ext/: example_ext.c  example_ext.h  extconf.rb
cashflow-c/lib/: example_ext.rb
cashflow-c/lib/example_ext/: version.rb
cashflow-c/spec/: example_ext_spec.rb  spec_helper.rb
crates/cash_flow_rust/: Cargo.toml  cash_flow_rust.gemspec
crates/cash_flow_rust/src/: lib.rs
crates/cash_flow_rust_ffi/: Makefile  README.md
crates/cash_flow_rust_helix/: Cargo.toml  cash_flow_rust_helix.gemspec
crates/cash_flow_rust_magnus/: Rakefile  cash_flow_rust_magnus.gemspec
crates/cash_flow_rust_ruru/: .gitignore  Cargo.toml  README.md  build-ruby.sh  move.sh
crates/cash_flow_rust_rutie/: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  cash_flow_rust_rutie.gemspec
crates/cash_flow_rust_rutie/lib/: cash_flow_rust_rutie.rb
crates/cash_flow_rust_rutie/lib/cash_flow_rust_rutie/: version.rb
crates/cash_flow_rust_rutie/spec/: cash_flow_rust_rutie_spec.rb  spec_helper.rb
crates/cash_flow_rust_rutie/src/: lib.rs  lib.rs.example
crates/text_transform/: Cargo.toml  Rakefile  text_transform.gemspec
(+18 files in other folders)
